[package]
name = "pr_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json 序列化处理
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
# 网络请求应答
reqwest = { version = "0.11", features = ["json"] }
# 异步
tokio = { version = "1", features = ["full"] }
# 命令行解析
clap = { version = "4.3.0", features = ["derive"] }
# 日期处理
chrono = "0.4.24"
# excel 处理
xlsxwriter = "0.6.0"
